--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>aqui vamos a hacer un blog del post</h1>
-    <p>este es el parrafo de inicio</p>
+    <div id="contenedor">
+        <div id="post">
+            <h1>este es un titulo interesante de post</h1>
+            <p>este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        </div>
+    </div>
+    
 </body>
 </html>
