--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div id="contenedor">
+        <div id="cabecera">
+                cabecera
+    
+        </div>
         <div id="post">
             <h1>este es un titulo interesante de post</h1>
             <p>este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
