finalizada la cabecera con diseno azul

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,8 +10,10 @@
 <body>
     <div id="contenedor">
         <div id="cabecera">
-                cabecera
-    
+                hiperblog
+                <span id="post">
+                    
+                </span>
         </div>
         <div id="post">
             <h1>este es un titulo interesante de post</h1>
