--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>este es un titulo interesante de post</h1>
             <p>este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>los blogs son la mejor forma de compartir informacion y tus ideas.</p>
         </div>
     </div>
     
