se puso rojo el texto y cambio h1

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div id="contenedor">
         <div id="cabecera">
-                hiperblog
+                hyper blog
                 <span id="post">
                     
                 </span>
