cambie el h1 y azul el texto

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div id="contenedor">
         <div id="cabecera">
-                hiperblog
+                hyperblog blog maestro
                 <span id="post">
                     
                 </span>
